--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
 body {
 	background-color: #80808042;
 }
+.col-md-6 {
+	background-color: rgb(230, 243, 230);
+	float: left;
+	height: 500px;
+	margin-left: 0;
+	padding: 5px;
+	border: ;
+}
+.navbar-brand {
+	color: white;
+	background-color: rgba(12, 204, 156, 0.918);
+	font-size: 2.5rem;
+}
+
+#name {
+	color: white;
+}
