--- a/indexstyle.css
+++ b/indexstyle.css
@@ -5,7 +5,7 @@ body {
 h1 {
 	font-size: 60px;
 }
-.col-md-8 {
+.col-md-7 {
 	background-color: ivory;
 	float: left;
 }
@@ -13,4 +13,8 @@ img {
 	height: 250px;
 	width: 200px;
 	float: left;
+}
+
+.nav-link {
+	float: right;
 }
