--- a/indexstyle.css
+++ b/indexstyle.css
@@ -7,10 +7,11 @@ h1 {
 	font-family: serif;
 	font-weight: 800;
 	color: rgb(18, 131, 112);
+	padding: 5px;
 }
 
 .col-md-7 {
-	background-color: ivory;
+	background-color: white;
 	float: left;
 }
 
