--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ body {
 .navbar-brand {
 	color: white;
 	background-color: rgb(18, 131, 112);
-	font-size: 2.5rem;
+	font-size: 40px;
+	font-family: serif;
+	font-weight: 800;
 }
 
 #name {
