--- a/pstyles.css
+++ b/pstyles.css
@@ -1,3 +1,14 @@
 body {
 	background-color: rgba(201, 201, 201, 0.801);
 }
+
+#spacer-1 {
+	height: 100px;
+}
+h1 {
+	font-size: 60px;
+	font-family: serif;
+	font-weight: 800;
+	color: rgb(18, 131, 112);
+	padding: 5px;
+}
