--- a/pstyles.css
+++ b/pstyles.css
@@ -12,3 +12,11 @@ h1 {
 	color: rgb(18, 131, 112);
 	padding: 5px;
 }
+
+.navbar-brand {
+	color: white;
+	background-color: rgb(18, 131, 112);
+	font-size: 40px;
+	font-family: serif;
+	font-weight: 800;
+}
