--- a/pstyles.css
+++ b/pstyles.css
@@ -24,10 +24,15 @@ h1 {
 #self {
 	color: white;
 }
-.col-md-7 {
+.col-md-9 {
 	background-color: rgb(251, 253, 251);
 	float: left;
 	margin-left: 0;
 	padding: 5px;
-	border: ;
+}
+
+.port-img {
+	height: 350px;
+	width: 350px;
+	float: left;
 }
