--- a/pstyles.css
+++ b/pstyles.css
@@ -28,11 +28,12 @@ h1 {
 	background-color: rgb(251, 253, 251);
 	float: left;
 	margin-left: 0;
-	padding: 5px;
+	margin: 5px;
 }
 
 .port-img {
 	height: 350px;
 	width: 350px;
 	float: left;
+	padding: 5px;
 }
