--- a/indexstyle.css
+++ b/indexstyle.css
@@ -40,3 +40,11 @@ img {
 .index-pic {
 	padding: 5px;
 }
+
+#footer {
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	background-color: rgba(99, 13, 13, 0.89);
+}
