--- a/style.css
+++ b/style.css
@@ -34,6 +34,16 @@ body {
 	border: 0;
 }
 
-#spacer-1 {
+#spacer {
 	height: 100px;
+}
+
+#footer {
+	position: -webkit-sticky;
+	position: sticky;
+	left: 0;
+	bottom: 0;
+	height: 20px;
+	width: 100%;
+	background-color: rgba(99, 13, 13, 0.89);
 }
