--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
 	position: sticky;
 	left: 0;
 	bottom: 0;
-	height: 20px;
+	height: 40px;
 	width: 100%;
-	background-color: rgba(99, 13, 13, 0.89);
+	background-color: #636c75;
 }
