Added footer to index page

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -48,7 +48,7 @@ img {
 	position: sticky;
 	left: 0;
 	bottom: 0;
-	height: 20px;
+	height: 40px;
 	width: 100%;
-	background-color: rgba(99, 13, 13, 0.89);
+	background-color: #636c75;
 }
