--- a/pstyles.css
+++ b/pstyles.css
@@ -37,3 +37,13 @@ h1 {
 	float: left;
 	padding: 5px;
 }
+
+#footer {
+	position: -webkit-sticky;
+	position: sticky;
+	left: 0;
+	bottom: 0;
+	height: 40px;
+	width: 100%;
+	background-color: #636c75;
+}
