--- a/indexstyle.css
+++ b/indexstyle.css
@@ -22,9 +22,14 @@ img {
 	width: 200px;
 	float: left;
 }
-
+/*  
 .nav-link {
 	float: right;
+} */
+
+#navbarNav {
+	position: absolute;
+	right: 0;
 }
 
 #spacer {
@@ -36,10 +41,11 @@ img {
 	background-color: rgb(18, 131, 112);
 	font-family: serif;
 	font-size: 40px;
+	float: left;
 	font-weight: 800;
 }
 
-.index-pic {
+#index-pic {
 	padding: 5px;
 }
 
