moved navbar list items to right on 'Portfolio' page

--- a/pstyles.css
+++ b/pstyles.css
@@ -38,6 +38,11 @@ h1 {
 	padding: 5px;
 }
 
+#navbarNav {
+	position: absolute;
+	right: 0;
+}
+
 #footer {
 	position: -webkit-sticky;
 	position: sticky;
