--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
 
 .navbar-brand {
 	color: white;
-	background-color: rgb(18, 131, 112);
+	background-color: rgb(123 204 190);
+
 	font-size: 40px;
 	font-family: serif;
 	font-weight: 800;
@@ -33,7 +34,7 @@ body {
 .contact-header {
 	margin: auto;
 	padding: 3px;
-	color: rgb(18, 131, 112);
+	color: rgb(123 204 190);
 	font-family: serif;
 	font-weight: 800;
 }
@@ -43,7 +44,7 @@ body {
 }
 
 .btn-lg {
-	background-color: rgb(18, 131, 112);
+	background-color: rgb(123 204 190);
 	border: 0;
 }
 
