--- a/pstyles.css
+++ b/pstyles.css
@@ -9,13 +9,13 @@ h1 {
 	font-size: 60px;
 	font-family: serif;
 	font-weight: 800;
-	color: rgb(18, 131, 112);
+	color: rgb(123 204 190);
 	padding: 5px;
 }
 
 .navbar-brand {
 	color: white;
-	background-color: rgb(18, 131, 112);
+	background-color: rgb(123 204 190);
 	font-size: 40px;
 	font-family: serif;
 	font-weight: 800;
