--- a/indexstyle.css
+++ b/indexstyle.css
@@ -6,7 +6,7 @@ h1 {
 	font-size: 60px;
 	font-family: serif;
 	font-weight: 800;
-	color: rgb(18, 131, 112);
+	color: rgb(123 204 190);
 	padding: 5px;
 }
 
@@ -38,7 +38,7 @@ img {
 
 #self {
 	color: white;
-	background-color: rgb(18, 131, 112);
+	background-color: rgb(123 204 190);
 	font-family: serif;
 	font-size: 40px;
 	float: left;
