--- a/style.css
+++ b/style.css
@@ -48,6 +48,15 @@ body {
 	border: 0;
 }
 
+.ftr-txt {
+	font-size: 7px;
+	float: right;
+	margin-top: 30px;
+	font-style: normal;
+	font-family: sans-serif;
+	color: rgb(228, 217, 217);
+}
+
 #footer {
 	position: -webkit-sticky;
 	position: sticky;
@@ -57,48 +66,3 @@ body {
 	width: 100%;
 	background-color: #636c75;
 }
-
-/* .navbar-brand {
-	color: white;
-	background-color: rgb(18, 131, 112);
-	font-size: 40px;
-	font-family: serif;
-	font-weight: 800;
-} */
-/* #input-info {
-	margin-left: 5px;
-} */
-/* #name {
-	color: white;
-} */
-
-/* .contact-header {
-	margin: auto;
-	padding: 3px;
-	color: rgb(18, 131, 112);
-	font-family: serif;
-	font-weight: 800;
-} */
-
-/* .btn-lg {
-	background-color: rgb(18, 131, 112);
-	border: 0;
-} */
-
-/* #navbarNav {
-	position: absolute;
-	right: 0;
-} */
-/* #spacer {
-	height: 100px;
-} */
-
-/* #footer {
-	position: -webkit-sticky;
-	position: sticky;
-	left: 0;
-	bottom: 0;
-	height: 40px;
-	width: 100%;
-	background-color: #636c75;
-} */
