--- a/style.css
+++ b/style.css
@@ -10,9 +10,6 @@ body {
 	font-family: serif;
 	font-weight: 800;
 }
-#name {
-	color: white;
-}
 
 #navbarNav {
 	position: absolute;
@@ -37,6 +34,10 @@ body {
 	color: rgb(123 204 190);
 	font-family: serif;
 	font-weight: 800;
+}
+
+#name {
+	color: white;
 }
 
 #input-info {
@@ -66,3 +67,64 @@ body {
 	width: 100%;
 	background-color: #636c75;
 }
+/* #navbarNav {
+	position: absolute;
+	right: 0;
+} */
+
+/* #name {
+	color: white;
+} */
+
+/* #navbarNav {
+	position: absolute;
+	right: 0;
+} */
+
+/* #spacer {
+	height: 100px;
+} */
+
+/* .col-md-6 {
+	background-color: rgb(251, 253, 251);
+	float: left;
+	margin-left: 0;
+	padding: 5px;
+	border: ;
+} */
+
+/* .contact-header {
+	margin: auto;
+	padding: 3px;
+	color: rgb(123 204 190);
+	font-family: serif;
+	font-weight: 800;
+} */
+
+/* #input-info {
+	margin-left: 5px;
+}
+
+.btn-lg {
+	background-color: rgb(123 204 190);
+	border: 0;
+}
+
+.ftr-txt {
+	font-size: 7px;
+	float: right;
+	margin-top: 30px;
+	font-style: normal;
+	font-family: sans-serif;
+	color: rgb(228, 217, 217);
+}
+
+#footer {
+	position: -webkit-sticky;
+	position: sticky;
+	left: 0;
+	bottom: 0;
+	height: 40px;
+	width: 100%;
+	background-color: #636c75;
+} */
