--- a/indexstyle.css
+++ b/indexstyle.css
@@ -13,7 +13,7 @@ h1 {
 .col-sm-4 {
 	background-color: white;
 	float: left;
-	height: 700px;
+	height: 800px;
 	padding: 5px;
 }
 
@@ -47,6 +47,7 @@ img {
 .text-wrap {
 	font-family: sans-serif;
 	text-align: justify;
+	font-size: 1em;
 }
 
 .ftr-txt {
