changed paragraphs on index.html

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -44,7 +44,7 @@ img {
 #index-pic {
 	padding: 5px;
 }
-.text-wrap {
+.self-bio {
 	font-family: sans-serif;
 	text-align: justify;
 	font-size: 1em;
