--- a/style.css
+++ b/style.css
@@ -36,6 +36,12 @@ body {
 	font-weight: 800;
 }
 
+p {
+	font-family: sans-serif;
+	text-align: justify;
+	font-size: 1em;
+}
+
 #name {
 	color: white;
 }
